# vad_preprocess

./: .gitignore  README.md  audio_segment_processor.py  cfg.yaml  compare_whisper_sgvad.py  create_sample_dateset.py  create_video_with_progress.py  font_test.py  how_to_use_visualize.md  is_noise_acceptable.py  mfcc_test.py  parse_textgrid.py  pyproject.toml  readme.md  requirements.txt  sgvad.py  sgvad_cpu.py  sgvad_e2e.py  sgvad_jit.py  sgvad_jit_example.py  sgvad_jit_test.py  sgvad_model.pt  sgvad_pt_throughput.py  smoothing_test.py  snr_calculator.py  snr_percentile_rmsratio.py  snr_sgvad_test.py  vad+visualize+cpu.py  vad+visualize+gpu.py  vad_compare.py  vad_compare_util.py  vad_visualize_core.py  vad_visualize_cpu.py  vad_visualize_gpu.py  vadscore_bypercentile.py  whisper_textgrid.py
